# comfygit-manager

./: .gitignore  CLAUDE.md  README.md  WORKFLOW_WEBSOCKET_FIX.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
api-testing/: QUICKSTART.md  README.md  bruno.json
docs/: COMFYUI_MANAGER_ARCHITECTURE.md  COMFYUI_MANAGER_UI_INTEGRATION.md  frontend-map.md  server-map.md
frontend/: .env.example  CLAUDE.md  INTERACTIVE-WIZARD-STATUS.md  TESTING-INTERACTIVE-RESOLUTION.md  THEMES.md  index.html  package-lock.json  package.json  test-modal.html  tsconfig.json  vite.config.ts
js/: comfygit-manager.js  comfygit-panel.css  comfygit-panel.js  comfygit-workflow-reload.js
scripts/: check-frontend-version.sh  comfygit-dev  comfygit-worktree.sh  install-hooks.sh  pull-runpod-image.sh  start-simulator.sh  sync-requirements.py
server/: __init__.py  comfygit_panel.py  comfygit_server.py  orchestrator.py  panel_environment_logger.py  panel_logging_config.py  workflow_file_watcher.py
testing/: .gitignore  DEBUG_UI_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PANEL_LOGGING_TEST.md  README.md  TEST_IMPLEMENTATION_GUIDE.md  __init__.py  conftest.py  pyproject.toml  run_tests.sh
testing/fixtures/deploy/: gpu_types.json  network_volumes.json  pod_created.json  pod_running.json  pod_stopped.json
testing/helpers/: __init__.py  mock_helpers.py  process_helpers.py  workspace_helpers.py
testing/integration/: __init__.py  test_config_endpoints.py  test_frontend_websocket_registration.py  test_orchestrator_bootstrap.py  test_restart_flow.py  test_runpod_live.py  test_switch_progress_polling.py  test_workflow_file_watcher.py
testing/integration/deploy/: __init__.py  conftest.py  test_client_factory.py  test_local_simulator.py
testing/integration/panel/: conftest.py  test_config_endpoints.py  test_deploy_endpoints.py  test_environment_endpoints.py  test_git_endpoints.py  test_import_endpoints.py  test_model_endpoints.py  test_node_endpoints.py  test_remotes_endpoints.py  test_setup_endpoints.py  test_status_endpoints.py  test_status_git_changes.py  test_sync_endpoints.py  test_workflow_endpoints.py  test_workspace_model_endpoints.py
testing/unit/: conftest.py  test_category_mismatch.py  test_comfyui_backend_flags.py  test_environment_detection.py  test_environment_switching.py.old  test_file_communication.py  test_health_checking.py  test_instance_conversion.py  test_orchestrator_abort.py  test_orchestrator_control.py  test_orchestrator_loop.py  test_orchestrator_signal_handling.py  test_orchestrator_venv.py  test_panel_logging.py  test_panel_model_status.py  test_runpod_client.py  test_runpod_graphql.py  test_runtime_environment_switch.py  test_serializers.py  test_startup_script.py  test_workspace_config.py
(+221 files in other folders)
