[project]
name = "comfygit-manager"
version = "0.0.10"
description = "ComfyGit Manager - Node for managing comfygit environments in ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comfygit-core>=0.3.6",
    "watchdog>=6.0.0",
    "zeroconf>=0.131.0",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.4.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "tomlkit>=0.12.0",
]

[project.urls]
Repository = "https://github.com/comfyhub-org/comfygit-manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akatz"
DisplayName = "ComfyGit Manager"
Icon = "https://github.com/comfyhub-org.png"
