[project]
name = "comfygit-manager-tests"
version = "0.1.0"
description = "Test suite for ComfyGit Manager orchestrator system"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "pytest-aiohttp>=1.0.5",
    "aiohttp>=3.9.0",
    "comfygit-core",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["unit*", "integration*", "helpers*"]

[tool.pytest.ini_options]
testpaths = ["unit", "integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that take more than 1s",
]

[tool.coverage.run]
source = ["../server"]
omit = ["*/tests/*", "*/testing/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
comfygit-core = { path = "../../comfygit/packages/core" }
